--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Afisha"
         tools:targetApi="31">
         <activity
+            android:name=".FavouriteMoviesActivity"
+            android:exported="false" />
+        <activity
             android:name=".MovieDetailsActivity"
             android:exported="false"
             android:theme="@style/Theme.Afisha" />
